RESOLVED FIXED207509
[ Mac Debug wk2 ] ASSERTION FAILED: m_wasConstructedOnMainThread == isMainThread()
https://bugs.webkit.org/show_bug.cgi?id=207509
Summary [ Mac Debug wk2 ] ASSERTION FAILED: m_wasConstructedOnMainThread == isMainThr...
Attachments
Patch (3.24 KB, patch)
2020-02-11 14:30 PST, youenn fablet
no flags
Patch (2.95 KB, patch)
2020-02-11 14:47 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-10 14:21:04 PST
Jason Lawrence
Comment 2 2020-02-10 14:25:45 PST
Marked this test as crashing while this issue is investigated here: https://trac.webkit.org/changeset/256213/webkit
Ryan Haddad
Comment 3 2020-02-10 16:55:04 PST
ASSERTION FAILED: m_wasConstructedOnMainThread == isMainThread() /Volumes/Data/slave/catalina-debug/build/WebKitBuild/Debug/usr/local/include/wtf/CompletionHandler.h(60) : Out WTF::CompletionHandler<void ()>::operator()(In...) 1 0x12f6fd2d9 WTFCrash 2 0x10c5f9c6b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10c6e777f WTF::CompletionHandler<void ()>::operator()() 4 0x10ccc611f WTF::CompletionHandlerCallingScope::~CompletionHandlerCallingScope() 5 0x10ccbb0b5 WTF::CompletionHandlerCallingScope::~CompletionHandlerCallingScope() 6 0x10cde0093 WebKit::CacheStorage::Engine::writeSizeFile(WTF::String const&, unsigned long long, WTF::CompletionHandler<void ()>&&)::$_26::~$_26() 7 0x10cdca9b5 WebKit::CacheStorage::Engine::writeSizeFile(WTF::String const&, unsigned long long, WTF::CompletionHandler<void ()>&&)::$_26::~$_26() 8 0x10ce083c1 WTF::Detail::CallableWrapper<WebKit::CacheStorage::Engine::writeSizeFile(WTF::String const&, unsigned long long, WTF::CompletionHandler<void ()>&&)::$_26, void>::~CallableWrapper() 9 0x10ce082d5 WTF::Detail::CallableWrapper<WebKit::CacheStorage::Engine::writeSizeFile(WTF::String const&, unsigned long long, WTF::CompletionHandler<void ()>&&)::$_26, void>::~CallableWrapper() 10 0x10ce082f9 WTF::Detail::CallableWrapper<WebKit::CacheStorage::Engine::writeSizeFile(WTF::String const&, unsigned long long, WTF::CompletionHandler<void ()>&&)::$_26, void>::~CallableWrapper() 11 0x12f711a3f std::__1::default_delete<WTF::Detail::CallableWrapperBase<void> >::operator()(WTF::Detail::CallableWrapperBase<void>*) const 12 0x12f7119bf std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void> > >::reset(WTF::Detail::CallableWrapperBase<void>*) 13 0x12f711959 std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void> > >::~unique_ptr() 14 0x12f711935 std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void> > >::~unique_ptr() 15 0x12f711915 WTF::Function<void ()>::~Function() 16 0x12f710c15 WTF::Function<void ()>::~Function() 17 0x12f82f913 WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0::~$_0() 18 0x12f82ec55 WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0::~$_0() 19 0x12f82f320 WTF::BlockPtr<void ()> WTF::BlockPtr<void ()>::fromCallable<WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0>(WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0)::'lambda'(void const*)::operator()(void const*) const 20 0x12f82f2a5 WTF::BlockPtr<void ()> WTF::BlockPtr<void ()>::fromCallable<WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0>(WTF::WorkQueue::dispatch(WTF::Function<void ()>&&)::$_0)::'lambda'(void const*)::__invoke(void const*) 21 0x7fff6d6ecbed _Block_release 22 0x7fff6d64550e _dispatch_client_callout 23 0x7fff6d64aace _dispatch_lane_serial_drain 24 0x7fff6d64b452 _dispatch_lane_invoke 25 0x7fff6d654a9e _dispatch_workloop_worker_thread 26 0x7fff6d89f6fc _pthread_wqthread 27 0x7fff6d89e827 start_wqthread LEAK: 1 WebPageProxy
youenn fablet
Comment 4 2020-02-11 14:30:23 PST
youenn fablet
Comment 5 2020-02-11 14:47:42 PST
Maciej Stachowiak
Comment 6 2020-02-11 16:20:58 PST
Is this patch meant to be flagged for review?
youenn fablet
Comment 7 2020-02-11 16:24:26 PST
(In reply to Maciej Stachowiak from comment #6) > Is this patch meant to be flagged for review? It is.
WebKit Commit Bot
Comment 8 2020-02-11 22:15:29 PST
Comment on attachment 390431 [details] Patch Clearing flags on attachment: 390431 Committed r256426: <https://trac.webkit.org/changeset/256426>
WebKit Commit Bot
Comment 9 2020-02-11 22:15:31 PST
All reviewed patches have been landed. Closing bug.
Jason Lawrence
Comment 10 2020-02-20 14:11:50 PST
Removed test expectations that were showing this test as passing while crashing. https://trac.webkit.org/changeset/257086/webkit
Note You need to log in before you can comment on or make changes to this bug.