Cherry-pick r256426. rdar://problem/59576790

[ Mac Debug wk2 ] ASSERTION FAILED: m_wasConstructedOnMainThread == isMainThread()
    https://bugs.webkit.org/show_bug.cgi?id=207509
    <rdar://problem/59325466>

    Reviewed by Chris Dumez.

    Covered by existing tests.

    * NetworkProcess/cache/CacheStorageEngine.cpp:
    (WebKit::CacheStorage::Engine::writeSizeFile):
    Make sure completion handler is always called on the main thread.
    Minor refactoring to make things more efficient.

    Canonical link: https://commits.webkit.org/220585@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256426 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.366@safari-609.1.20.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609.1.20.1-branch@256972 268f45cc-cd09-0410-ab3c-d52691b4dbfc